# PatreonBox

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh.md  index.html  package-lock.json  package.json  vite.config.ts
DisplayMode/: README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 00001_init.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: account.rs  auth.rs  comments.rs  download_manager.rs  file_ops.rs  image_migration.rs  logging.rs  mod.rs  perf.rs  scraping.rs  search.rs  self_check.rs  settings.rs  subscriptions.rs  sync_history.rs  util.rs
src/components/ui/: scroll-area.tsx  switch.tsx  toolbar-button.tsx
src/features/command/: CommandPalette.tsx
src/features/dev/: PerfHud.tsx
src/features/downloads/: DownloadStatusIcon.tsx  DownloadsView.tsx  ThroughputChart.tsx  useDownloadJobs.ts  useThroughput.ts
src/features/favorites/: FavoritesView.tsx
src/features/search/: SearchView.tsx
src/features/settings/: SettingsContext.tsx  SettingsView.tsx
src/features/settings/sections/: AboutSection.tsx  AccountSection.tsx  AppearanceSection.tsx  DeveloperModeSection.tsx  LanguageSection.tsx  NetworkSection.tsx  SelfCheckPanel.tsx  StorageSection.tsx  SyncHistorySection.tsx  SyncSection.tsx
src/features/workbench/: FilmstripDock.tsx  IconRail.tsx  TimelineView.tsx  WorkbenchView.tsx
src/lib/: assetUrl.ts  db.ts  demoData.ts  formatDate.ts  i18n.ts  media.ts  settings.ts  theme.ts
src/types/: db.ts  settings.ts
