[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = ["protocol-asset"] }
# Pin the Tauri 2.10-era family: 2.11 tightened capability ACL so remote (patreon.com)
# webviews can no longer invoke the app's own commands, which breaks the scraper's
# data channel. Held at 2.10 until we migrate the scraper off remote-command IPC.
tauri-runtime = "=2.10.1"
tauri-utils = "=2.8.3"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sha2 = "0.10.9"
chrono = "0.4.44"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "cookies", "native-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2.5"
fastrand = "2"
fs4 = "1"
trash = "5"
sysinfo = "0.32"
tauri-plugin-dialog = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

